--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -51,7 +51,7 @@
 display: flex;
 position: sticky;
 top: 0;
-width: 100vw;
+width: 100%;
 height: 100vh;
 background-color: #ececec;
 padding-inline: 4vw;
